--- a/RecentSavesWidget/RecentSavesWidgetRelease_AlphaNeue.entitlements
+++ b/RecentSavesWidget/RecentSavesWidgetRelease_AlphaNeue.entitlements
@@ -2,12 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>GroupId</key>
-	<string>$(GROUP_ID)</string>
-	<key>NSExtension</key>
-	<dict>
-		<key>NSExtensionPointIdentifier</key>
-		<string>com.apple.widgetkit-extension</string>
-	</dict>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.ideashower.ReadItLaterProAlphaNeue</string>
+	</array>
 </dict>
 </plist>
