--- a/Info.plist
+++ b/Info.plist
@@ -50,6 +50,16 @@
 				<string>pocket-next</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.mozilla.pocket</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>pocket</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
