feat(tests): add test bundle 4

--- a/Pocket.xcodeproj/xcshareddata/xcschemes/Pocket (iOS).xcscheme
+++ b/Pocket.xcodeproj/xcshareddata/xcschemes/Pocket (iOS).xcscheme
@@ -219,6 +219,9 @@
          <TestPlanReference
             reference = "container:UITestsFlaky.xctestplan">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:UITests-4.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
