--- a/PocketKit/Frameworks/DiffMatchPatch.xcframework/Info.plist
+++ b/PocketKit/Frameworks/DiffMatchPatch.xcframework/Info.plist
@@ -7,6 +7,8 @@
 		<dict>
 			<key>BinaryPath</key>
 			<string>DiffMatchPatch.framework/DiffMatchPatch</string>
+			<key>DebugSymbolsPath</key>
+			<string>dSYMs</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64</string>
 			<key>LibraryPath</key>
@@ -38,6 +40,8 @@
 		<dict>
 			<key>BinaryPath</key>
 			<string>DiffMatchPatch.framework/Versions/A/DiffMatchPatch</string>
+			<key>DebugSymbolsPath</key>
+			<string>dSYMs</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64_x86_64-maccatalyst</string>
 			<key>LibraryPath</key>
