fix(frameworks): add version to DiffMatchPatch framework

--- a/PocketKit/Frameworks/DiffMatchPatch.xcframework/ios-arm64_x86_64-maccatalyst/DiffMatchPatch.framework/Versions/A/Resources/Info.plist
+++ b/PocketKit/Frameworks/DiffMatchPatch.xcframework/ios-arm64_x86_64-maccatalyst/DiffMatchPatch.framework/Versions/A/Resources/Info.plist
@@ -44,5 +44,9 @@
 	<array>
 		<integer>2</integer>
 	</array>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>1</string>
 </dict>
 </plist>
