feat(CI): update apollo install command line args

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -141,7 +141,7 @@ workflows:
                 set -e
 
                 cd PocketKit
-                swift package --allow-writing-to-package-directory apollo-cli-install
+                swift package --allow-writing-to-package-directory apollo-cli-install --allow-network-connections all
                 ./apollo-ios-cli fetch-schema
                 ./apollo-ios-cli generate
 
