--- a/Pocket_iOS_Release.entitlements
+++ b/Pocket_iOS_Release.entitlements
@@ -8,6 +8,8 @@
 	<array>
 		<string>applinks:getpocket.com</string>
 	</array>
+	<key>com.apple.developer.shared-with-you</key>
+	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.ideashower.ReadItLaterPro</string>
