--- a/Pocket_iOS_Debug.entitlements
+++ b/Pocket_iOS_Debug.entitlements
@@ -7,6 +7,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:getpocket.com</string>
+		<string>applinks:pocket.co</string>
 	</array>
 	<key>com.apple.developer.shared-with-you</key>
 	<true/>
