--- a/bitrise.yml
+++ b/bitrise.yml
@@ -146,7 +146,7 @@ workflows:
     steps:
         - script@1:
             inputs:
-                - content: |-
+                - content: |
                     #!/usr/bin/env bash
                     # fail if any commands fails
                     set -e
