--- a/bitrise.yml
+++ b/bitrise.yml
@@ -146,16 +146,26 @@ workflows:
     steps:
         - script@1:
             inputs:
-            - content: |
-                #!/usr/bin/env bash
-                # fail if any commands fails
-                set -e
-                # testing coverage
-                xcrun xcresulttool version
-                xcrun xcresulttool metadata get --path merged.xcresult
-                xcrun xcresulttool graph --path merged.xcresult
-                xcrun xccov view --report --json /Users/vagrant/git/merged.xcresult > afile
+                - script_file_path: null
+                - content: |-
+                    #!/usr/bin/env bash
+                    # fail if any commands fails
+                    set -e
+                    # make pipelines' return status equal the last command to exit with a non-zero status, or zero if all commands exit successfully
+                    set -o pipefail
+                    # debug log
+                    set -x
 
+                    # write your script here
+                    xcrun xcresulttool version
+                    xcrun xcresulttool metadata get --path merged.xcresult
+                    xcrun xcresulttool graph --path merged.xcresult
+                    xcrun xccov view --report --json /Users/vagrant/git/merged.xcresult > afile
+
+                    # or run a script from your repository, like:
+                    # bash ./path/to/script.sh
+                    # not just bash, e.g.:
+                    # ruby ./path/to/script.rb
       - activate-ssh-key@4: {}
       - git-clone@8: {}
       - script@1:
